--- a/index.html
+++ b/index.html
@@ -290,7 +290,22 @@
 	</div>
 
 <!-- Grab Google CDN's jQuery. --> 
-<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script> 
+<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
+
+<!-- Google analytics. -->
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-47050667-1']);
+  _gaq.push(['_setDomainName', 'democracyos.org']);
+  _gaq.push(['_setAllowLinker', true]);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 
 <!-- this is where we put our custom functions --> 
 <script src="js/jquery.js"></script>
