--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		<div id="avatars">
 			<img src="images/maze-bg.png" alt="Maze" usemap="#Map" border="0" width="1920" height="624" />
 			<map name="Map" id="Map">
-				<area shape="poly" coords="744,270,697,297,697,350,743,379,791,351,792,297" href="https://twitter.com/oscarguindzberg" target="_blank" />
+				<area shape="poly" coords="744,270,697,297,697,350,743,379,791,351,792,297" href="https://twitter.com/santisiri" target="_blank" />
 			    <area shape="poly" coords="1434,181,1387,208,1387,261,1433,290,1481,262,1482,208" href="https://twitter.com/en256bits" target="_blank" />
                 <area shape="poly" coords="585,362,538,389,538,442,584,471,632,443,633,389" href="https://twitter.com/GAastt" target="_blank" />
                 <area shape="poly" coords="691,361,644,388,644,441,690,470,738,442,739,388" href="https://twitter.com/evajules" target="_blank" />
@@ -134,19 +134,19 @@
                 <area shape="poly" coords="957,271,910,298,910,351,956,380,1004,352,1005,298" href="https://twitter.com/agustinfrizzera" target="_blank" />
                 <area shape="poly" coords="851,271,804,298,804,351,850,380,898,352,899,298" href="https://twitter.com/slifszyc" target="_blank" />
                 <area shape="poly" coords="744,270,697,297,697,350,743,379,791,351,792,297" href="https://twitter.com/oscarguindzberg" target="_blank" />
-                <area shape="poly" coords="1223,181,1176,208,1176,261,1222,290,1270,262,1271,208" href="https://twitter.com/donpowa" target="_blank" />
+                <area shape="poly" coords="1223,181,1176,208,1176,261,1222,290,1270,262,1271,208" href="https://twitter.com/lisantronic" target="_blank" />
                 <area shape="poly" coords="1327,180,1280,207,1280,260,1326,289,1374,261,1375,207" href="https://twitter.com/julianpeller" target="_blank" />
-                <area shape="poly" coords="531,270,484,297,484,350,530,379,578,351,579,297" href="https://twitter.com/rominisky23" target="_blank" />
+                <area shape="poly" coords="531,270,484,297,484,350,530,379,578,351,579,297" href="https://twitter.com/ebrenman" target="_blank" />
                 <area shape="poly" coords="638,269,591,296,591,353,638,380,686,353,686,296" href="https://twitter.com/piamancini" target="_blank" />
-                <area shape="poly" coords="691,180,644,207,645,263,692,290,740,263,739,207" href="https://twitter.com/felipemuni" target="_blank" />
-                <area shape="poly" coords="797,180,749,209,749,262,799,292,846,265,844,209" href="https://twitter.com/yaninacasaca" target="_blank" />
-                <area shape="poly" coords="904,181,857,208,857,261,903,290,951,262,952,208" href="https://twitter.com/NicoMeer" target="_blank" />
-                <area shape="poly" coords="1009,180,962,207,963,263,1010,289,1058,263,1057,207" href="https://twitter.com/gvilarino" target="_blank" />
-                <area shape="poly" coords="1116,180,1069,207,1069,260,1115,289,1163,261,1164,207" href="https://twitter.com/annagramma" target="_blank" />
-                <area shape="poly" coords="1221,0,1174,27,1174,80,1220,109,1268,81,1269,27" href="https://twitter.com/gonza_arguello" target="_blank" />
-                <area shape="poly" coords="1329,0,1282,27,1282,80,1328,109,1376,81,1377,27" href="https://twitter.com/muniquevedo" target="_blank" />
+                <area shape="poly" coords="691,180,644,207,645,263,692,290,740,263,739,207" href="https://twitter.com/JuicyMinerva" target="_blank" />
+                <area shape="poly" coords="797,180,749,209,749,262,799,292,846,265,844,209" href="https://twitter.com/gchiesa" target="_blank" />
+                <area shape="poly" coords="904,181,857,208,857,261,903,290,951,262,952,208" href="https://twitter.com/mgalanternik" target="_blank" />
+                <area shape="poly" coords="1009,180,962,207,963,263,1010,289,1058,263,1057,207" href="https://twitter.com/brenucciferri" target="_blank" />
+                <area shape="poly" coords="1116,180,1069,207,1069,260,1115,289,1163,261,1164,207" href="https://twitter.com/gravityonmars" target="_blank" />
+                <area shape="poly" coords="1221,0,1174,27,1174,80,1220,109,1268,81,1269,27" href="https://twitter.com/yaninacasaca" target="_blank" />
+                <area shape="poly" coords="1329,0,1282,27,1282,80,1328,109,1376,81,1377,27" href="https://twitter.com/NicoMeer" target="_blank" />
                 <area shape="poly" coords="531,90,484,117,484,170,530,199,578,171,579,117" href="https://twitter.com/gvilarino" target="_blank" />
-                <area shape="poly" coords="639,90,591,116,592,171,638,200,686,172,687,118" href="https://twitter.com/Archi7Mont" target="_blank" />
+                <area shape="poly" coords="639,90,591,116,592,171,638,200,686,172,687,118" href="https://twitter.com/annagramma" target="_blank" />
                 <area shape="poly" coords="745,90,696,116,696,172,744,199,792,171,793,117" href="https://twitter.com/gonza_arguello" target="_blank" />
                 <area shape="poly" coords="850,90,803,117,802,173,849,199,897,171,898,117" href="https://twitter.com/muniquevedo" target="_blank" />
                 <area shape="poly" coords="957,89,910,116,912,173,958,199,1005,171,1005,116" href="https://twitter.com/nmaschwitz" target="_blank" />
@@ -158,7 +158,7 @@
                 <area shape="poly" coords="1275,89,1227,117,1227,170,1275,200,1323,171,1322,117" href="https://twitter.com/equaine" target="_blank" />
                 <area shape="poly" coords="1380,90,1333,117,1333,170,1379,199,1427,171,1428,117" href="https://twitter.com/juanib82" target="_blank" />
                 <area shape="poly" coords="585,181,538,208,537,263,584,290,632,262,633,208" href="https://twitter.com/marianolopata" target="_blank" />
-                <area shape="poly" coords="902,0,855,27,855,80,901,109,949,81,950,27" href="https://twitter.com/ebrenman" target="_blank" />
+                <area shape="poly" coords="902,0,855,27,855,80,901,109,949,81,950,27" href="https://twitter.com/@rominisky23" target="_blank" />
                 <area shape="poly" coords="584,0,537,27,537,80,583,109,631,81,632,27" href="https://twitter.com/oscarguindzberg" target="_blank" />
                 <area shape="poly" coords="690,0,643,27,643,80,689,109,737,81,738,27" href="https://twitter.com/santisiri" target="_blank" />            
 			</map>
