Update links twitter handles

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <area shape="poly" coords="585,181,538,208,537,263,584,290,632,262,633,208" href="https://twitter.com/marianolopata" target="_blank" />
                 <area shape="poly" coords="902,0,855,27,855,80,901,109,949,81,950,27" href="https://twitter.com/@rominisky23" target="_blank" />
                 <area shape="poly" coords="584,0,537,27,537,80,583,109,631,81,632,27" href="https://twitter.com/oscarguindzberg" target="_blank" />
-                <area shape="poly" coords="690,0,643,27,643,80,689,109,737,81,738,27" href="https://twitter.com/santisiri" target="_blank" />            
+                <area shape="poly" coords="690,0,643,27,643,80,689,109,737,81,738,27" href="https://twitter.com/donpowa" target="_blank" />            
 			</map>
 		</div>
 		</div>
