correction typos in content

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			<h1 class="whiteHead">Who We Are</h1>
 			<p>Behind the project there's a group of 40+ millennials; young entrepreneurs and active enthusiasts,<br/>
 			from software engineers and artists, to political scientists and educators, led by <a href="https://twitter.com/santisiri" class="yellow">Santiago Siri</a>, (elect-<br/>
-			ed as Globar Shaper by the <a href="http://www.youtube.com/watch?v=mMQgiGOBlXk" class="voilet">World Economic Forum</a>, panelist in the <a href="http://www.youtube.com/watch?v=lECAWGkvDlg" class="green">World Justice Forum</a> 2013 and<br/>
+			ed as Global Shaper by the <a href="http://www.youtube.com/watch?v=mMQgiGOBlXk" class="voilet">World Economic Forum</a>, panelist in the <a href="http://www.youtube.com/watch?v=lECAWGkvDlg" class="green">World Justice Forum</a> 2013 and<br/>
 			<a href="http://www.youtube.com/watch?v=YBR84aZTPTU" class="pink">TEDx speaker</a>) Learn more about our story on our <a href="#" class="blue">blog</a>, or tweet hi below.</p>
 			<div class="lineBreak"></div>
 		<div id="avatars">
@@ -168,7 +168,7 @@
 			<h1 class="blackHead">FAQ</h1>
 			<div id="accordian">
 				<div>
-					<h3><img src="images/bullet-pink.png" alt="" />How does DOS improves previous online voting systems?</h3>
+					<h3><img src="images/bullet-pink.png" alt="" />How does dOS improves previous online voting systems?</h3>
 					<div class="accContent">
 						<p>DemocracyOS has a much more user friendly interface, specially in terms of data visualization and browser. It is a two-way platform: bottom-up (citizens can present projects to be debated) and top-down (the representative presents for debate those bills currently in debate in Congress). DemocracyOS has three basic actions: get informed, join the conversation and vote.</p>
 					</div>
