Typos and some corrections in the FAQ section

--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
 			<h1 class="blackHead">FAQ</h1>
 			<div id="accordian">
 				<div>
-					<h3><img src="images/bullet-pink.png" alt="" />How does dOS improves previous online voting systems?</h3>
+					<h3><img src="images/bullet-pink.png" alt="" />How does DOS improve previous online voting systems?</h3>
 					<div class="accContent">
-						<p>DemocracyOS has a much more user friendly interface, specially in terms of data visualization and browser. It is a two-way platform: bottom-up (citizens can present projects to be debated) and top-down (the representative presents for debate those bills currently in debate in Congress). DemocracyOS has three basic actions: get informed, join the conversation and vote.</p>
+						<p>DemocracyOS has a much more user friendly interface, specially in terms of data visualization and browsing. It is a two-way platform: bottom-up (citizens can present projects to be debated) and top-down (the representative presents for debate those bills currently in debate in Congress). DemocracyOS has three basic actions: get informed, join the conversation and vote.</p>
 					</div>
 				</div>
 				<div>
@@ -181,33 +181,33 @@
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-yellow.png" alt="" />How difficult will be to implement dOS in my party/institution?</h3>
+					<h3><img src="images/bullet-yellow.png" alt="" />How difficult will be to implement DOS in my party/institution?</h3>
 					<div class="accContent">
-						<p>We will provide content (videos, tutorials) so that ideally anyone can setup DemocracyOS. It should be similar to installing a wordpress. </p>
+						<p>We will provide content (videos, tutorials) so that ideally anyone can setup DemocracyOS. It should be similar to installing wordpress.</p>
 					</div>
 				</div>
 				<div>
 					<h3><img src="images/bullet-green.png" alt="" />Will you provide a support assistance?</h3>
 					<div class="accContent">
-						<p>As part of the project’s financial sustainability plan, we will provide consulting services, training, support and adaptations. It can be used in public or private organisations.</p>
+						<p>As a part of the project’s financial sustainability plan, we provide consulting services, training, support and adaptations. DOS can be used by public or private organisations.</p>
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-voilet.png" alt="" />Can I customize dOS?</h3>
+					<h3><img src="images/bullet-voilet.png" alt="" />Can I customize DOS?</h3>
 					<div class="accContent">
-						<p>Currently is not working as a package to be installed. But it is licensed under MIT, so anyone can download it and modify it according to their needs respecting the license. </p>
+						<p>Of course! Although currently there's no customization module available, since DOS is licensed under MIT, anyone can download/clone it and modify it suiting their needs while respecting the license.</p>
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-yellow.png" alt="" />In what languages ​​will it be available?</h3>
+					<h3><img src="images/bullet-yellow.png" alt="" />In what languages will it be available?</h3>
 					<div class="accContent last">
 						<p>Firstly in english and spanish, we will be incorporating translations as we progress.</p>
 					</div>
 				</div>	
 				<div>
-					<h3><img src="images/bullet-pink.png" alt="" />Why are you launching dOS on Kickstarter?</h3>
+					<h3><img src="images/bullet-pink.png" alt="" />Why are you launching DOS on Kickstarter?</h3>
 					<div class="accContent">
-						<p>We share the philosophy behind Kickstarter, we want to crowdfund our project. We want to take the software to the next level and we need support to make it happen.</p>
+						<p>We share the philosophy behind Kickstarter, we want to crowdfund our project. We want to take the software to the next level and we need support to make it happen. </p>
 						<p>Crowdfunding dOS will help us to hire programmers and hosting to build a stable and scalable product that contemplates a vast number of users. Secondly, we want to carry out actions that allow us to build an enthusiast community of citizens participating regularly.</p>
 					</div>
 				</div>
@@ -218,27 +218,27 @@
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-voilet.png" alt="" />How secure is dOS against hackers?</h3>
+					<h3><img src="images/bullet-voilet.png" alt="" />How secure is DOS against hackers?</h3>
 					<div class="accContent">
-						<p>A systems security depends as much on its code as the platform on which that code is executed. DemocracyOS is open source and under MIT licence. Because it’s Open Source, our platform invites all programmers and hackers to participate and collaborate in the information security building process. As well, it will allow for any implementation to extend its code to the conditions it deems necessary. Every interaction inside DemocracyOS is registered and an alert mechanism will be in place to detect bugs as well as unwanted interventions and correct them. </p>
+						<p>A system's security depends as much on its code as the platform on which that code is executed. DemocracyOS is open source and under MIT licence. Becauseof this, we invites all programmers and hackers to collaborate in the information security building process. Also, it will allow for any implementation to extend its code to the conditions it deems necessary. Every interaction inside DemocracyOS is registered and an alert mechanism will be in place to detect bugs as well as unwanted interventions and correct them. </p>
 						<p>Technically, DemocracyOS is conceived to be independent from the operating system, hence an implementation’s security will be subject to the security measures its environment provides. DemocracyOS guarantees the transparent and safe functioning of the platform but can also be empowered by the security arrangements each implementation chooses.</p>
 					</div>
 				</div>
 				<div>
 					<h3><img src="images/bullet-yellow.png" alt="" />How does the delegation feature works?</h3>
 					<div class="accContent last">
-						<p>If someone feels they are not sufficiently informed to cast a vote on certain topic, he/she can choose another citizen as their proxy on a that particular topic (tag). We’ve put in place an alert system that informs those who have proxy voters, how the proxy will vote and thus the user can then confirm or pull back their delegation and cast a vote directly (the default setting for no-action is confirmation). Proxy delegates are allowed to delegate their vote (and therefore those votes delegated to them) on someone else for that same tag.</p>
+						<p>If someone feels they are not sufficiently informed to cast a vote on certain topic, he/she can choose another citizen as their proxy on a that particular topic (tag). We’ve put in place an alert system that informs those who have proxy voters, how the proxy will vote and thus the user can then confirm or pull back their delegation and cast a vote directly (the default setting for no-action is confirmation). Proxy delegates are allowed to delegate their vote (and therefore those votes delegated to them) on someone else for that same tag. </p>
 						<p>You can always take back that delegation.</p>
 					</div>
 				</div>		
 				<div>
 					<h3><img src="images/bullet-pink.png" alt="" />Will it work on mobile devices?</h3>
 					<div class="accContent">
-						<p>The first version will only be HTML5 and we will later improve compatibility with more basic technologies.</p>
+						<p>DemocracyOS is built on HTML5 and is responsive-ready, so it works on most mobile browsers out of the box. Please report a bug if you find it not to work on your device!</p>
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-green.png" alt="" />Will dOS include notifications?</h3>
+					<h3><img src="images/bullet-green.png" alt="" />Will DOS include notifications?</h3>
 					<div class="accContent">
 						<p>There are going to be settings at the user level and proposal level. Notifications will be sent for every update or a report every certain period of time.</p>
 					</div>
