Some more corrections on FAQ

--- a/index.html
+++ b/index.html
@@ -181,13 +181,14 @@
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-yellow.png" alt="" />How difficult will be to implement DOS in my party/institution?</h3>
+					<h3><img src="images/bullet-yellow.png" alt="" />How difficult is it to implement DOS in my party/institution?</h3>
 					<div class="accContent">
-						<p>We will provide content (videos, tutorials) so that ideally anyone can setup DemocracyOS. It should be similar to installing wordpress.</p>
+						<p>It should be similar to installing wordpress. We will provide content (videos, tutorials) so that ideally anyone can setup DemocracyOS. </p>
+						<p>We will also be building a self-setup mechanism for those of you who just can't wait. </p>
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-green.png" alt="" />Will you provide a support assistance?</h3>
+					<h3><img src="images/bullet-green.png" alt="" />Do you provide a support assistance?</h3>
 					<div class="accContent">
 						<p>As a part of the project’s financial sustainability plan, we provide consulting services, training, support and adaptations. DOS can be used by public or private organisations.</p>
 					</div>
@@ -199,7 +200,7 @@
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-yellow.png" alt="" />In what languages will it be available?</h3>
+					<h3><img src="images/bullet-yellow.png" alt="" />In what languages is it available?</h3>
 					<div class="accContent last">
 						<p>Firstly in english and spanish, we will be incorporating translations as we progress.</p>
 					</div>
@@ -212,7 +213,7 @@
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-green.png" alt="" />How does ID Validation works?</h3>
+					<h3><img src="images/bullet-green.png" alt="" />How does ID validation works?</h3>
 					<div class="accContent">
 						<p>Users must provide online identity (twitter, facebook, email) and a legal identiy (drivers license, ID card, passport) and then get validated by at least six other validated users. We are also looking into mechanisms such as, personally knowing at least one validated user or visiting in person with your ID Card to obtain a user name.</p>
 					</div>
@@ -228,7 +229,7 @@
 					<h3><img src="images/bullet-yellow.png" alt="" />How does the delegation feature works?</h3>
 					<div class="accContent last">
 						<p>If someone feels they are not sufficiently informed to cast a vote on certain topic, he/she can choose another citizen as their proxy on a that particular topic (tag). We’ve put in place an alert system that informs those who have proxy voters, how the proxy will vote and thus the user can then confirm or pull back their delegation and cast a vote directly (the default setting for no-action is confirmation). Proxy delegates are allowed to delegate their vote (and therefore those votes delegated to them) on someone else for that same tag. </p>
-						<p>You can always take back that delegation.</p>
+						<p>You can always take back that delegation, anytime. </p>
 					</div>
 				</div>		
 				<div>
