--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<h1 class="blackHead">About Us</h1>
 			<div class="error clearfix">
 				<img src="images/error.png" alt="Error Screen"/>
-				<p>Occupy Wall Street. Arab Spring. Greek Riots. We’ve been experiencing a great crisis of representation these past decades, regardless of our geolocation, ethnicity or culture. The political system insists in excluding most of us from the spaces where the decisions that impact the most in our life are taken. The internet has changed -everything-; the way we share and consume culture, the way we do commerce,and communicate with others. But the internet has failed to change in one key space of our lives: politics. Democracy is in great lack of a serious update.</p>
+				<p>Occupy Wall Street. Arab Spring. Greek Riots. We’ve been experiencing a great crisis of representation these past decades, regardless of our geolocation, ethnicity or culture. The political system insists in excluding most of us from the spaces where the decisions that impact the most in our life are taken. The internet has changed everything: the way we share and consume culture, the way we do commerce, and communicate with others. But the internet has failed to change in one key space of our lives: politics. Democracy is in great need of a serious update.</p>
 			</div>
 			<div class="info">
 				<img src="images/monitor.jpg" alt="It's time to Change the Tool" class="monitor"/>
