Some more work on FAQ

--- a/index.html
+++ b/index.html
@@ -233,13 +233,13 @@
 					</div>
 				</div>		
 				<div>
-					<h3><img src="images/bullet-pink.png" alt="" />Will it work on mobile devices?</h3>
+					<h3><img src="images/bullet-pink.png" alt="" />Does it work on mobile devices?</h3>
 					<div class="accContent">
 						<p>DemocracyOS is built on HTML5 and is responsive-ready, so it works on most mobile browsers out of the box. Please report a bug if you find it not to work on your device!</p>
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-green.png" alt="" />Will DOS include notifications?</h3>
+					<h3><img src="images/bullet-green.png" alt="" />How dos DOS notifications work?</h3>
 					<div class="accContent">
 						<p>There are going to be settings at the user level and proposal level. Notifications will be sent for every update or a report every certain period of time.</p>
 					</div>
