More typos in FAQS

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
 				<div>
 					<h3><img src="images/bullet-voilet.png" alt="" />What's the status of development?</h3>
 					<div class="accContent">
-						<p>We’ve built the initial 20% of the software. The basic initial architecture, frontend, we are working on a Law Markup Language for legislative data (a data structure standard to incorporate data scrapped from legislative sources around the word. The goal is to build and LML to be read by DemocracyOS as well as other apps that accept this open standard) Finally, we have a tested first prototype.</p>
-						<p>For us to build a stable version, in multiple languages, with mobile support and API REST, we project one year minimum of development with an experienced team of full time time of 5 to 7 people.</p>
+						<p>We’ve built the initial 20% of the software. The basic initial architecture, frontend, we are working on a Law Markup Language for legislative data (a data structure standard to incorporate data scrapped from legislative sources around the word. The goal is to build an LML to be read by DemocracyOS as well as other apps that accept this open standard) Finally, we have a tested first prototype.</p>
+						<p>For us to build a stable version, in multiple languages, with mobile support and API REST, we project one year minimum of development with an experienced team of full time of 5 to 7 people.</p>
 					</div>
 				</div>
 				<div>
@@ -209,24 +209,24 @@
 					<h3><img src="images/bullet-pink.png" alt="" />Why are you launching DOS on Kickstarter?</h3>
 					<div class="accContent">
 						<p>We share the philosophy behind Kickstarter, we want to crowdfund our project. We want to take the software to the next level and we need support to make it happen. </p>
-						<p>Crowdfunding dOS will help us to hire programmers and hosting to build a stable and scalable product that contemplates a vast number of users. Secondly, we want to carry out actions that allow us to build an enthusiast community of citizens participating regularly.</p>
+						<p>Crowdfunding DOS will help us hire programmers and hosting to build a stable and scalable product that contemplates a vast number of users. Secondly, we want to carry out actions that allow us to build an enthusiast community of citizens participating regularly.</p>
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-green.png" alt="" />How does ID validation works?</h3>
+					<h3><img src="images/bullet-green.png" alt="" />How does ID validation work?</h3>
 					<div class="accContent">
-						<p>Users must provide online identity (twitter, facebook, email) and a legal identiy (drivers license, ID card, passport) and then get validated by at least six other validated users. We are also looking into mechanisms such as, personally knowing at least one validated user or visiting in person with your ID Card to obtain a user name.</p>
+						<p>Users must provide both an online identity (twitter, facebook, email) and a legal identity (drivers license, ID card, passport) and then get validated by at least six other validated users. We are also looking into mechanisms such as, personally knowing at least one validated user or visiting in person with your ID Card to obtain a user name.</p>
 					</div>
 				</div>
 				<div>
 					<h3><img src="images/bullet-voilet.png" alt="" />How secure is DOS against hackers?</h3>
 					<div class="accContent">
-						<p>A system's security depends as much on its code as the platform on which that code is executed. DemocracyOS is open source and under MIT licence. Becauseof this, we invites all programmers and hackers to collaborate in the information security building process. Also, it will allow for any implementation to extend its code to the conditions it deems necessary. Every interaction inside DemocracyOS is registered and an alert mechanism will be in place to detect bugs as well as unwanted interventions and correct them. </p>
+						<p>A system's security depends as much on its code as the platform on which that code is executed. DemocracyOS is open source and under MIT licence. This is why we invite all programmers and hackers to collaborate in the information security building process. Also, it will allow for any implementation to extend its code to the conditions it deems necessary. Every interaction inside DemocracyOS is registered and an alert mechanism will be put in place to detect bugs as well as unwanted interventions and correct them. </p>
 						<p>Technically, DemocracyOS is conceived to be independent from the operating system, hence an implementation’s security will be subject to the security measures its environment provides. DemocracyOS guarantees the transparent and safe functioning of the platform but can also be empowered by the security arrangements each implementation chooses.</p>
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-yellow.png" alt="" />How does the delegation feature works?</h3>
+					<h3><img src="images/bullet-yellow.png" alt="" />How does the delegation feature work?</h3>
 					<div class="accContent last">
 						<p>If someone feels they are not sufficiently informed to cast a vote on certain topic, he/she can choose another citizen as their proxy on a that particular topic (tag). We’ve put in place an alert system that informs those who have proxy voters, how the proxy will vote and thus the user can then confirm or pull back their delegation and cast a vote directly (the default setting for no-action is confirmation). Proxy delegates are allowed to delegate their vote (and therefore those votes delegated to them) on someone else for that same tag. </p>
 						<p>You can always take back that delegation, anytime. </p>
@@ -239,7 +239,7 @@
 					</div>
 				</div>
 				<div>
-					<h3><img src="images/bullet-green.png" alt="" />How dos DOS notifications work?</h3>
+					<h3><img src="images/bullet-green.png" alt="" />How do DOS notifications work?</h3>
 					<div class="accContent">
 						<p>There are going to be settings at the user level and proposal level. Notifications will be sent for every update or a report every certain period of time.</p>
 					</div>
