Add Github Btn on header

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 						<li><a href="#slide5">Contact Us</a></li>
 					</ul>
 				</div>
+				<div id="github"><a href="https://github.com/DemocracyOS"><img src="images/github-32.png" alt="GitHub" /></a></div>
 				<div id="twitter"><a href="https://twitter.com/DemocracyOS"><img src="images/twitter.png" alt="Twitter" /></a></div>
 			</div>
 		</div>
