--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 						<li><a href="#slide5">Contact Us</a></li>
 					</ul>
 				</div>
-				<div id="github"><a href="https://github.com/DemocracyOS"><img src="images/github-32.png" alt="GitHub" /></a></div>
-				<div id="twitter"><a href="https://twitter.com/DemocracyOS"><img src="images/twitter.png" alt="Twitter" /></a></div>
+				<div id="github"><a href="https://github.com/DemocracyOS" target="blank"><img src="images/github-32.png" alt="GitHub" /></a></div>
+				<div id="twitter"><a href="https://twitter.com/DemocracyOS" target="blank"><img src="images/twitter.png" alt="Twitter" /></a></div>
 			</div>
 		</div>
 	</header>
