--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 		<div id="slide3" class="clearfix">
 			<h1 class="whiteHead">Who We Are</h1>
 			<p>Behind the project there's a group of 40+ millennials; young entrepreneurs and active enthusiasts,<br/>
-			from software engineers and artists, to political scientists and educators, led by <a href="https://twitter.com/santisiri" class="yellow">Santiago Siri</a>, (elect-<br/>
+			from software engineers and artists to political scientists and educators, led by <a href="https://twitter.com/santisiri" class="yellow">Santiago Siri</a>, elect-<br/>
 			ed as Global Shaper by the <a href="http://www.youtube.com/watch?v=mMQgiGOBlXk" class="voilet">World Economic Forum</a>, panelist in the <a href="http://www.youtube.com/watch?v=lECAWGkvDlg" class="green">World Justice Forum</a> 2013 and<br/>
-			<a href="http://www.youtube.com/watch?v=YBR84aZTPTU" class="pink">TEDx speaker</a>). Learn more about our story on our <a href="#" class="blue">blog</a>, or tweet hi below.</p>
+			<a href="http://www.youtube.com/watch?v=YBR84aZTPTU" class="pink">TEDx speaker</a>. Learn more about our story on our <a href="#" class="blue">blog</a>, or tweet hi below.</p>
 			<div class="lineBreak"></div>
 		<div id="avatars">
 			<img src="images/maze-bg.png" alt="Maze" usemap="#Map" border="0" width="1920" height="624" />
@@ -171,20 +171,20 @@
 				<div>
 					<h3><img src="images/bullet-pink.png" alt="" />How does DOS improve previous online voting systems?</h3>
 					<div class="accContent">
-						<p>DemocracyOS has a much more user friendly interface, specially in terms of data visualization and browsing. It is a two-way platform: bottom-up (citizens can present projects to be debated) and top-down (the representative presents for debate those bills currently in debate in Congress). DemocracyOS has three basic actions: get informed, join the conversation and vote.</p>
+						<p>DemocracyOS has a much more user friendly interface, especially in terms of data visualization and browsing. It is a two-way platform: bottom-up (citizens can present projects to be debated) and top-down (the representative presents for debate those bills currently in debate in Congress). DemocracyOS has three basic actions: get informed, join the conversation and vote.</p>
 					</div>
 				</div>
 				<div>
 					<h3><img src="images/bullet-voilet.png" alt="" />What's the status of development?</h3>
 					<div class="accContent">
-						<p>We’ve built the initial 20% of the software. The basic initial architecture, frontend, we are working on a Law Markup Language for legislative data (a data structure standard to incorporate data scrapped from legislative sources around the word. The goal is to build an LML to be read by DemocracyOS as well as other apps that accept this open standard) Finally, we have a tested first prototype.</p>
+						<p>We’ve built the initial 20% of the software - the basic initial architecture and frontend. We are working on a Law Markup Language for legislative data (a data structure standard to incorporate data scrapped from legislative sources around the word. The goal is to build an LML to be read by DemocracyOS as well as other apps that accept this open standard) Finally, we have a tested first prototype.</p>
 						<p>For us to build a stable version, in multiple languages, with mobile support and API REST, we project one year minimum of development with an experienced team of full time of 5 to 7 people.</p>
 					</div>
 				</div>
 				<div>
 					<h3><img src="images/bullet-yellow.png" alt="" />How difficult is it to implement DOS in my party/institution?</h3>
 					<div class="accContent">
-						<p>It should be similar to installing wordpress. We will provide content (videos, tutorials) so that ideally anyone can setup DemocracyOS. </p>
+						<p>It should be similar to installing Wordpress. We will provide content (videos, tutorials) so that ideally anyone can setup DemocracyOS. </p>
 						<p>We will also be building a self-setup mechanism for those of you who just can't wait. </p>
 					</div>
 				</div>
@@ -203,7 +203,7 @@
 				<div>
 					<h3><img src="images/bullet-yellow.png" alt="" />In what languages is it available?</h3>
 					<div class="accContent last">
-						<p>Firstly in english and spanish, we will be incorporating translations as we progress.</p>
+						<p>Firstly in English and Spanish, we will be incorporating translations as we progress.</p>
 					</div>
 				</div>	
 				<div>
