Added content in Who we are

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			<p>Behind the project there's a group of 40+ millennials; young entrepreneurs and active enthusiasts,<br/>
 			from software engineers and artists to political scientists and educators, led by <a href="https://twitter.com/santisiri" class="yellow">Santiago Siri</a>, elect-<br/>
 			ed as Global Shaper by the <a href="http://www.youtube.com/watch?v=mMQgiGOBlXk" class="voilet">World Economic Forum</a>, panelist in the <a href="http://www.youtube.com/watch?v=lECAWGkvDlg" class="green">World Justice Forum</a> 2013 and<br/>
-			<a href="http://www.youtube.com/watch?v=YBR84aZTPTU" class="pink">TEDx speaker</a>. Learn more about our story on our <a href="#" class="blue">blog</a>, or tweet hi below.</p>
+			Pía Mancini, political scientist and <a href="http://www.youtube.com/watch?v=fOn2IIpj7iY" class="pink">TEDx speaker</a>. Learn more about our story on our <a href="#" class="blue">blog</a>, or tweet hi below.</p>
 			<div class="lineBreak"></div>
 		<div id="avatars">
 			<img src="images/maze-bg.png" alt="Maze" usemap="#Map" border="0" width="1920" height="624" />
