Update blog link to open on external target window

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="section clearfix">
 					<nav class="nav-1">
 						<ul>
-							<li><a href="http://democracyos.tumblr.com" target="_blank">Blog</a></li>
+							<li><a href="http://democracyos.tumblr.com" rel="external">Blog</a></li>
 							<li><a href="#slide6" class="middle">About Us</a></li>
 							<li><a href="#slide2"><img src="images/kickstarter.png" alt="Kick Starter" /></a></li>
 						</ul>
