Changed url for live demo link. Fixes #2

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			</div>
 			<div class="info">
 				<img src="images/monitor.jpg" alt="It's time to Change the Tool" class="monitor"/>
-				<p>We are working on a user-friendly, open-source, vote-and-debate tool, specially crafted for parlia-ments, parties and decision-making institutions that will allow citizens to <strong>get informed, join the con-versation</strong> and <strong>vote</strong> on topics, just how they want their representatives to vote. A tool that will trans-form the noise we create during protests into a signal that has a clear, direct and strong impact on the political system. Our vision is that DemocracyOS will become the operating system of a more open and participatory government. <a href="http://democraciaenred.org/" class="lightGreen">Live Demo for the City of Buenos Aires.</a></p>
+				<p>We are working on a user-friendly, open-source, vote-and-debate tool, specially crafted for parlia-ments, parties and decision-making institutions that will allow citizens to <strong>get informed, join the con-versation</strong> and <strong>vote</strong> on topics, just how they want their representatives to vote. A tool that will trans-form the noise we create during protests into a signal that has a clear, direct and strong impact on the political system. Our vision is that DemocracyOS will become the operating system of a more open and participatory government. <a href="http://dos.partidodelared.org/" class="lightGreen">Live Demo for the City of Buenos Aires.</a></p>
 				<p>We're about to start a Kickstarter to seek funding for our mission. <a href="mailto:speak@democracyos.org" class="pink">Want to Join us?</a></p>
 				<img src="images/divider.png" alt="" class="divider" />
 				<img src="images/app-screens.jpg" alt="" />
