Changed email box text

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				<img src="images/change-tool.png" alt="Lets Change the Tool" />
 				<form method="post" action="http://democraciaenred.createsend.com/t/d/s/kthjj/">
 					<p>Get a heads up on our<img src="images/kickstarter-large.png" alt="KickStarter" />launch! (*)</p>
-					<input type="email" placeholder="your@email.com" name="cm-kthjj-kthjj" required />
+					<input type="email" placeholder="Notify me when campaign is launched" suggest="email" class="suggestive error" name="cm-kthjj-kthjj" required/>
 					<input type="submit" value="Notify Me" />
 				</form>
 				<p>*We will not spam. We will mail only once notifying once the Kickstarter is launched, then you can opt-out of our mailing list.</p>
