--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		<div id="slide3" class="clearfix">
 			<h1 class="whiteHead">Who We Are</h1>
 			<p>Behind the project there's a group of 40+ millennials; young entrepreneurs and active enthusiasts,<br/>
-			from software engineers and artists to political scientists and educators, led by <a href="https://twitter.com/santisiri" class="yellow">Santiago Siri</a>, elect-<br/>
+			software engineers, artists, political scientists and educators, led by <a href="https://twitter.com/santisiri" class="yellow">Santiago Siri</a>, elect-<br/>
 			ed as Global Shaper by the <a href="http://www.youtube.com/watch?v=mMQgiGOBlXk" class="voilet" target="_blank">World Economic Forum</a>, panelist in the <a href="http://www.youtube.com/watch?v=lECAWGkvDlg" class="green" target="_blank">World Justice Forum</a> 2013 and<br/>
 			Pía Mancini, political scientist and <a href="http://www.youtube.com/watch?v=fOn2IIpj7iY" class="pink" target="_blank">TEDx speaker</a>. Learn more about our story on our <a href="#" class="blue">blog</a>, or tweet hi below.</p>
 			<div class="lineBreak"></div>
