changes About Us

--- a/index.html
+++ b/index.html
@@ -108,9 +108,7 @@
 		<div id="slide3" class="clearfix">
 			<h1 class="whiteHead">Who We Are</h1>
 			<p>Behind the project there's a group of 40+ millennials; young entrepreneurs and active enthusiasts,<br/>
-			software engineers, artists, political  and social scientists and educators. All aligned for a <br/> a common purpose: to stop choosing between pre-set options and take part in designing those options.  <br/>The balance between coders and social scientists is key since we are building technology with meaning: building a net democracy. <br/> <!-- <a href="https://twitter.com/santisiri" class="yellow">Santiago Siri</a>, elect-<br/>
-			ed as Global Shaper by the <a href="http://www.youtube.com/watch?v=mMQgiGOBlXk" class="voilet" target="_blank">World Economic Forum</a>, panelist in the <a href="http://www.youtube.com/watch?v=lECAWGkvDlg" class="green" target="_blank">World Justice Forum</a> 2013 and<br/>
-			Pía Mancini, political scientist and <a href="http://www.youtube.com/watch?v=fOn2IIpj7iY" class="pink" target="_blank">TEDx speaker</a>. --> Learn more about our story on our <a href="http://blog.democracyos.org" target="_blank" class="blue">blog</a>, or tweet hi below.</p>
+			software engineers, artists, political  and social scientists and educators. All aligned for a <br/> a common purpose: to stop choosing between pre-set options and take part in designing those options.  <br/>The balance between coders and social scientists is key since we are building technology with meaning: building a net democracy. <br/> We presented democracyOS at <a href="http://www.youtube.com/watch?v=mMQgiGOBlXk" class="voilet" target="_blank">World Economic Forum</a>, <a href="http://www.youtube.com/watch?v=lECAWGkvDlg" class="green" target="_blank">World Justice Forum</a>  and <a href="http://www.youtube.com/watch?v=fOn2IIpj7iY" class="pink" target="_blank">TEDx</a>. <br/> Check them out and learn more about our story on our <a href="http://blog.democracyos.org" target="_blank" class="blue">blog</a>!</p>
 			<div class="lineBreak"></div>
 		<div id="avatars">
 			<img src="images/maze-bg.png" alt="Maze" usemap="#Map" border="0" width="1920" height="624" />
